# todo-cli

./: .gitignore  CMakeLists.txt  README.md
include/: get_time.h  make_id.h
include/database/: delete_db.h  fetchall.h  fetchid.h  insert_db.h
src/: main.cpp
src/components/: get_time.cpp  make_id.cpp
src/database/: delete_db.cpp  fetchall.cpp  fetchid.cpp  insert_db.cpp
